# jfk_files

./: pyproject.toml  schema.json  summarize.py
jfk_json/: 104-10003-10041.json  104-10004-10143 (C06932208).json  104-10004-10143.json  104-10004-10156.json  104-10004-10213.json  104-10005-10321.json  104-10006-10247.json  104-10007-10345.json  104-10009-10021.json  104-10009-10222.json  104-10012-10022.json  104-10012-10024.json  104-10012-10035.json  104-10012-10076.json  104-10012-10078.json  104-10012-10079.json  104-10014-10051.json  104-10014-10064.json  104-10016-10021.json  104-10023-10087.json  104-10048-10124.json  104-10048-10252.json  104-10049-10362.json  104-10049-10375.json  104-10051-10106.json  104-10051-10170.json  104-10052-10130.json  104-10059-10099.json  104-10059-10188.json  104-10061-10053.json  104-10062-10227.json  104-10063-10206.json  104-10064-10012.json  104-10065-10028.json  104-10066-10010.json  104-10066-10076.json  104-10068-10142.json  104-10068-10164.json  104-10068-10172.json  104-10069-10077.json  (+968 more)
